# app/Filament/Resources/TicketResource/Pages/EditTicket.php
@@ -40,4 +40,30 @@ class EditTicket extends EditRecord
 
         $service->delete($record, $user);
     }
+
+    protected function mutateFormDataBeforeFill(array $data): array
+    {
+        $record = $this->getRecord();
+        $data['category_ids'] = $record->categories->pluck('id')->all();
+        $data['tag_ids'] = $record->tags->pluck('id')->all();
+
+        return $data;
+    }
+
+    protected function mutateFormDataBeforeSave(array $data): array
+    {
+        $data['category_ids'] = $this->normalizeIdentifiers($data['category_ids'] ?? []);
+        $data['tag_ids'] = $this->normalizeIdentifiers($data['tag_ids'] ?? []);
+
+        return $data;
+    }
+
+    /**
+     * @param  array<int|string>  $values
+     * @return array<int>
+     */
+    protected function normalizeIdentifiers(array $values): array
+    {
+        return array_values(array_unique(array_filter(array_map(static fn ($value) => (int) $value, $values), static fn ($value) => $value > 0)));
+    }
 }
