# app/Models/TicketDepartment.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Models;
+
+use App\Traits\BelongsToBrand;
+use App\Traits\BelongsToTenant;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class TicketDepartment extends Model
+{
+    use HasFactory;
+    use SoftDeletes;
+    use BelongsToTenant;
+    use BelongsToBrand;
+
+    protected $fillable = [
+        'tenant_id',
+        'brand_id',
+        'name',
+        'slug',
+        'description',
+    ];
+
+    public function tickets(): HasMany
+    {
+        return $this->hasMany(Ticket::class, 'department_id');
+    }
+}
